css/chat.css
/* Light and Dark Theme Variables */
:root {
  --box-shadow-color: rgba(0, 0, 0, 0.1);
  --dot-color: var(--green-9);
  --message-kelvin-background-color: var(--orange-4);
  --message-kelvin-shadow-color: var(--orange-a2);
  --message-user-background-color: var(--green-4);
  --message-user-shadow-color: var(--green-a2);
}

.dark {
  --box-shadow-color: rgba(255, 255, 255, 0.1);
  --dot-color: var(--green-9);
  --message-kelvin-background-color: var(--orange-5);
  --message-kelvin-shadow-color: var(--orange-a3);
  --message-user-background-color: var(--green-5);
  --message-user-shadow-color: var(--green-a3);
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

html, body {
  height: 100dvh;
  overflow-y: hidden;
  overscroll-behavior: none;
  -webkit-overflow-scrolling: auto;
}

body {
  background-image: linear-gradient(var(--orange-2), var(--green-2));
}

main {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow-y: hidden;
}

/* Chat Header */
header {
  flex-shrink: 0;
  padding: 0.75rem 2rem;
  background-color: var(--orange-1);
  border-radius: 0 0 1.5rem 1.5rem;
  box-shadow: 0 0 10px var(--box-shadow-color);
}

.chat-header {
  display: flex;
  align-items: center;
}

.chat-avatar-container {
  position: relative;
  line-height: normal;
}

.chat-avatar-container img {
  border-radius: 50%;
}

.chat-avatar-container::after {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  width: 0.65rem;
  height: 0.65rem;
  background-color: var(--dot-color);
  box-shadow: 0 0 0 3px var(--orange-1);
  border-radius: 50%;
}

.chat-name {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 1.5rem;
}

.chat-name h2 {
  font-weight: 500;
  font-size: 1.2rem;
  color: var(--gray-12);
}

.chat-name span {
  font-size: 0.75rem;
  color: var(--gray-11);
}

.return-btn {
  padding: 0.25rem;
  line-height: normal;
  margin-left: auto;
  border-radius: 0.5rem;
  transition: background-color 0.1s ease-out;
}

@media (hover: hover) {
  .return-btn:hover {
    background-color: var(--clickable-hover-bg);
  }
}

@media (hover: none) {
  .return-btn:active {
    background-color: var(--clickable-hover-bg);
  }
}

.return-btn:focus-visible {
  background-color: var(--clickable-hover-bg);
}

/* Chat Messages */
#chatMessages {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  min-height: 0;
  overflow-x: hidden;
  overflow-y: auto;
  scrollbar-width: none;
  padding: 0.5rem 0 1rem 0;
  scroll-behavior: smooth;
}

#chatMessages::-webkit-scrollbar {
  display: none;
}

.message {
  padding: 0.75rem 1rem;
  margin: 1rem 1.5rem;
  overflow-wrap: break-word;
  max-width: calc(100% - 4rem);
}

.message p {
  color: var(--gray-12);
  padding: 0;
  margin: 0;
}

.message.kelvin {
  background-color: var(--message-kelvin-background-color);
  box-shadow: 0 4px var(--message-kelvin-shadow-color);
  align-self: flex-start;
  border-radius: 1rem 1rem 1rem 0;
  margin-right: 4rem;
}

.message.user {
  white-space: pre-wrap;
  background-color: var(--message-user-background-color);
  box-shadow: 0 4px var(--message-user-shadow-color);
  align-self: flex-end;
  border-radius: 1rem 1rem 0 1rem;
  margin-left: 4rem;
}

/* Chat Input */
form {
  position: relative;
  flex-shrink: 0;
  background-color: var(--green-1);
  border-radius: 1.5rem 1.5rem 0 0;
  box-shadow: 0 0 10px var(--box-shadow-color);
  padding: 1.5rem;
}

.chat-input {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

#userInput {
  flex-grow: 1;
  min-width: 3rem;
  min-height: 0;
  max-height: 7.5rem;
  font-family: "Inter", sans-serif;
  background-color: var(--white-black);
  color: var(--text-color);
  font-size: 1rem;
  overflow-y: auto;
  resize: none;
  padding: 0.5rem 0.75rem;
  border: 1px solid var(--gray-6);
  border-radius: 0.75rem;
  margin: 0;
}

#userInput:focus-visible {
  outline: 1px solid var(--green-5);
  border-color: var(--green-5);
}

#sendBtn {
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--green-8);
  border: none;
  border-radius: 0.75rem;
  width: 2.25rem;
  height: 2.75rem;
  margin: 0;
  padding: 0;
}

@media (hover: hover) {
  #sendBtn:hover {
    background-color: var(--green-5);
  }
}

@media (hover: none) {
  #sendBtn:active {
    background-color: var(--green-5);
  }
}

#sendBtn:focus-visible,
#sendBtn:disabled {
  background-color: var(--green-5);
}

